--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -10,7 +10,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     env:
-      PACKAGE_VERSION: ${{ format('0.2.{0}+{1}', env.GITHUB_RUN_NUMBER, env.GITHUB_SHA) }}
+      PACKAGE_VERSION: ${{ format('0.2.{0}+{1}', $GITHUB_RUN_NUMBER, $GITHUB_SHA) }}
     steps:
     - uses: actions/checkout@v2
     - name: Setup .NET
