fix: added run_number

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -21,7 +21,7 @@ jobs:
       run: dotnet build --no-restore
     - name: Pack
       env:
-        PACKAGE_VERSION: ${{ format('0.2.{0}+{1}', env.GITHUB_RUN_NUMBER, github.sha) }}
+        PACKAGE_VERSION: ${{ format('0.2.{0}+{1}', github.run_number, github.sha) }}
       run: dotnet pack TogglAPI.NetStandard/TogglAPI.NetStandard.csproj -c Release -p:Version=$PACKAGE_VERSION -o /output
     - name: Upload Package
       uses: actions/upload-artifact@v2.2.4
