--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -27,5 +27,5 @@ jobs:
       uses: actions/upload-artifact@v2.2.4
       with:
         name: package
-        path: /output
+        path: ./output
         retention-days: 0
