feat(ci): add publish step

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -29,3 +29,21 @@ jobs:
         name: package
         path: ./output
         retention-days: 0
+  publish:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Setup .NET
+      uses: actions/setup-dotnet@v1
+      with:
+        dotnet-version: 5.0.x
+    - name: Download Artifact
+      uses: actions/download-artifact#v2.2.4
+      with:
+        name: package
+        version: ${{ github.sha }}
+        output-path: ./output
+    - name: Upload to NuGet
+      env:
+        NUGET_API_KEY: ${{ secrets.NUGET_API_KEY }}
+        PACKAGE_NAME: ${{ format('TogglAPI.NetStandard.0.2.{0}.nupkg', github.run_number) }}
+      run: dotnet nuget push ./output/$PACKAGE_NAME -k $NUGET_API_KEY -s https://api.nuget.org/v3/index.json
