fix(ci): add dependency on build

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -30,6 +30,7 @@ jobs:
         path: ./output
         retention-days: 0
   publish:
+    needs: [build]
     runs-on: ubuntu-latest
     steps:
     - name: Setup .NET
