--- a/TogglAPI.NetStandard/TogglAPI.NetStandard.csproj
+++ b/TogglAPI.NetStandard/TogglAPI.NetStandard.csproj
@@ -1,10 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
+    <TargetFramework>netstandard2.0</TargetFramework>
     <PackageId>TogglAPI.NetStandard</PackageId>
     <Authors>Pirozhenko Ilya</Authors>
     <Owners>Daniel Buchanan</Owners>
+    <Description>TogglAPI.Net is a C# wrapper for the http://toggl.com/. This package replaces TogglAPI.Net as it is no longer maintained.</Description>
     <ProjectUrl>https://github.com/daniel-buchanan/TogglAPI.NetStandard</ProjectUrl>
     <IconUrl></IconUrl>
     <Tags>toggl api sdk togglapi wrapper</Tags>
